<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFCCCCCC"
    android:textColor="#000000"
    tools:context="com.example.android.popularmovies.MovieDetails">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:contentDescription="@string/movie_poster"
                android:src="@drawable/android" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="2dp"
                android:paddingLeft="20dp"
                android:paddingRight="2dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/textview_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_header"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/example_release"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_vote_average_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/vote_average_header"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/example_vote_average"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_genre_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/popularity_header"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textview_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/example_popularity"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/example_title"
                android:textStyle="bold"
                android:textSize="26sp" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_synopsis"
                    tools:textSize="24sp" />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>